--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,6 +19,26 @@ body{
  }
  
 
+ /* width */
+::-webkit-scrollbar {
+   width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+   background: #c5c5c5;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+   background: #757FEF;
+   border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+   background: #599A8D;
+}
  
 
 
